--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -30,6 +30,11 @@
 
 <body class="bg-dark text-light">
   <form class="row g-3" th:action="@{/register}" th:object="${registerRequest}" method="post">
+
+    <div th:if="${message}">
+      <p class="text-warning text-center" th:text="${message}">Algun Texto</p>
+    </div>
+
     <h2 class="fs-1 text-center">Registro</h2>
 
     <div class="col-md-12 mb-2">
@@ -59,7 +64,7 @@
     </div>
     <p class="mt-5 text-muted text-center">
       &copy; 2023 mikell bobadilla<br/>
-      <strong><a class="text-muted" href="">Link to proyect</a></strong>
+      <strong><a class="text-muted" href="https://github.com/mikellbobadilla/login_thymeleaf" target="_blank">Link to project</a></strong>
     </p>
   </form>
 
