The project is done. Only need Doc

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 
-<body class="bg-dark">
+<body class="bg-dark container-md">
   <h2 class="mt-5 text-light text-center">Usuarios</h2>
   <table class="table mt-3 table-sm">
   <thead>
