--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sf="http://www.w3.org/1999/xhtml" lang="es">
 
 <head>
   <meta charset="UTF-8">
